Grace/tests/gibbs/errors/t197.grace
// ERROR = P1004
if true {
    print "true"
}
